deployment/kubernetes/https-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: https-proxy
  namespace: dataprime-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: https-proxy
  template:
    metadata:
      labels:
        app: https-proxy
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 8443
              name: https-frontend
            - containerPort: 8444
              name: https-api
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: tls-certs
              mountPath: /etc/nginx/certs
              readOnly: true
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-https-config
        - name: tls-certs
          secret:
            secretName: ecommerce-tls
---
apiVersion: v1
kind: Service
metadata:
  name: https-proxy
  namespace: dataprime-demo
spec:
  type: NodePort
  selector:
    app: https-proxy
  ports:
    - name: https-frontend
      port: 443
      targetPort: 8443
      nodePort: 30443
      protocol: TCP
    - name: https-api
      port: 8443
      targetPort: 8444
      nodePort: 30444
      protocol: TCP
